deploy/azure/network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
  },
  "variables": {
    "bootstrapAsg": "bootstrap",
    "bootstrapSubnet": "bootstrap",
    "bootstrapSubnetPrefix": "10.0.0.16/28",
    "privateDns": "environment.private",
    "paasSubnet": "paas",
    "paasSubnetPrefix": "10.0.0.0/28",
    "laboratorySubnet": "laboratory",
    "laboratorySubnetPrefix": "10.0.0.32/27",
    "lockdownSubnet": "lockdown",
    "lockdownSubnetPrefix": "10.0.0.64/27",
    "vnet": "environment",
    "workerAsg": "worker"
  },
  "resources": [
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('workerAsg')]",
      "properties": {
      }
    },
    {
      "type": "Microsoft.Network/applicationSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('bootstrapAsg')]",
      "properties": {
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('bootstrapSubnet')]",
      "properties": {
      }
    },
    {
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('bootstrapAsg'))]",
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('workerAsg'))]"
      ],
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('paasSubnet')]",
      "properties": {
        "securityRules": [
          {
            "name": "all-inbound-deny",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          },
          {
            "name": "worker-inbound-allow",
            "properties": {
              "priority": 1000,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "TCP",
              "sourceApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('workerAsg'))]"
                }
              ],
              "sourcePortRange": "*",
              "destinationAddressPrefix": "[variables('paasSubnetPrefix')]",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "bootstrap-inbound-allow",
            "properties": {
              "priority": 1200,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "TCP",
              "sourceApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('bootstrapAsg'))]"
                }
              ],
              "sourcePortRange": "*",
              "destinationAddressPrefix": "[variables('paasSubnetPrefix')]",
              "destinationPortRanges": [
                "1433",
                "443"
              ]
            }
          },
          {
            "name": "all-outbound-deny",
            "properties": {
              "priority": 4096,
              "direction": "Outbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('laboratorySubnet')]",
      "properties": {
      }
    },
    {
      "dependsOn": [
        "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('workerAsg'))]"
      ],
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('lockdownSubnet')]",
      "properties": {
        "securityRules": [
          {
            "name": "all-inbound-deny",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          },
          {
            "name": "private-endpoints-outbound-allow",
            "properties": {
              "priority": 1000,
              "direction": "Outbound",
              "access": "Allow",
              "protocol": "TCP",
              "sourceApplicationSecurityGroups": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('workerAsg'))]"
                }
              ],
              "sourcePortRange": "*",
              "destinationAddressPrefix": "[variables('paasSubnetPrefix')]",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "all-outbound-deny",
            "properties": {
              "priority": 4096,
              "direction": "Outbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          }
        ]
      }
    },
    {
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bootstrapSubnet'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('paasSubnet'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('laboratorySubnet'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('lockdownSubnet'))]"
      ],
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-11-01",
      "location": "[resourceGroup().location]",
      "name": "[variables('vnet')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "[variables('paasSubnet')]",
            "properties": {
              "addressPrefix": "[variables('paasSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('paasSubnet'))]"
              },
              "privateEndpointNetworkPolicies": "Disabled"
            }
          },
          {
            "name": "[variables('bootstrapSubnet')]",
            "properties": {
              "addressPrefix": "[variables('bootstrapSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bootstrapSubnet'))]"
              }
            }
          },
          {
            "name": "[variables('laboratorySubnet')]",
            "properties": {
              "addressPrefix": "[variables('laboratorySubnetPrefix')]",
              "delegations": [
                {
                  "name": "appService",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverfarms"
                  }
                }
              ],
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('laboratorySubnet'))]"
              },
              "serviceEndpoints": [
                {
                  "service": "Microsoft.Sql",
                  "locations": [
                    "[resourceGroup().location]"
                  ]
                },
                {
                  "service": "Microsoft.Storage",
                  "locations": [
                    "[resourceGroup().location]"
                  ]
                }
              ]
            }
          },
          {
            "name": "[variables('lockdownSubnet')]",
            "properties": {
              "addressPrefix": "[variables('lockdownSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('lockdownSubnet'))]"
              }
            }
          }
        ]
      }
    },
    {
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
      ],
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2018-09-01",
      "location": "global",
      "name": "[variables('privateDns')]",
      "properties": {
      },
      "resources": [
        {
          "dependsOn": [
            "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDns'))]"
          ],
          "type": "virtualNetworkLinks",
          "apiVersion": "2018-09-01",
          "location": "global",
          "name": "privatedns",
          "properties": {
            "registrationEnabled": false,
            "virtualNetwork": {
              "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
              "resourceGroup": "[resourceGroup().name]"
            }
          }
        }
      ]
    }
  ],
  "outputs": {
    "bootstrapAsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('bootstrapAsg'))]"
    },
    "bootstrapSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), variables('bootstrapSubnet'))]"
    },
    "paasSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), variables('paasSubnet'))]"
    },
    "laboratorySubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), variables('laboratorySubnet'))]"
    },
    "lockdownSubnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), variables('lockdownSubnet'))]"
    },
    "privateDnsId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDns'))]"
    },
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
    },
    "workerAsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/applicationSecurityGroups', variables('workerAsg'))]"
    }
  }
}
